@@ -64,6 +64,7 @@ export(abbreviateTimeLabels,
        as.rsk,
        as.sealevel,
        as.section,
+       as.tidem,
        as.topo,
        as.unit,
        as.windrose,
